[package]
name = "asomeip"
version = "0.9.1"
edition = "2021"
authors = ["Matthias Behr"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mbehr1/asomeip/"
homepage = "https://github.com/mbehr1/asomeip/"
readme= "README.md"
description = "Library to handle SOME/IP messages incl. payload via Fibex files."
keywords = ["dlt", "automotive", "fibex", "someip", "analysis"]
categories = ["development-tools", "encoding", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afibex = "0.11.1"
lazy_static = "1.4.0"
encoding_rs = "0.8.32"
bitvec = "1"
funty = "2.0.0"
regex = "1.10.3"

[package.metadata.workspaces]
independent = true
